# mlflow_llmops

./: .gitignore  README.md
ch3/: CHANGELOG.md  prompt.txt  pyproject.toml  todo_comment_20260423.md
ch3/agents/: thread.py
ch3/evaluation/: 04_register_scorers.py  06_conversation_sim.py
ch3/prompts/: 01_register_prompt.py  02_version_update.py  04_evaluate_prompt.py  05_optimize_metaprompt.py  06_optimize_gepa.py  07_deploy_lifecycle.py  08_model_config.py  09_structured_output.py
ch3/scripts/: web_ingest.py
ch3/serving/: eval_serving.py  log_model.py  model_code.py  start_server.py
ch4/: pyproject.toml
ch5/: pyproject.toml
ch5/evaluation/: 01_vibe_check.py  02_standard_scorers.py  05_run_evaluation.py  scorers.py
ch6/: Makefile  README.md
ch6/data/: eval_dataset.py
ch6/prompts/: 01_register_prompt.py  03_alias_management.py  04_evaluate_prompt.py  05_optimize_metaprompt.py  06_optimize_gepa.py  07_deploy_lifecycle.py  08_model_config.py  09_structured_output.py
ch7/: Makefile  README.md  prompt.txt  pyproject.toml
ch7/deploy/: Dockerfile
ch7/gateway/: gateway_ab_test.yaml  gateway_config.yaml
ch7/serving/: agent.py  (+2 more)
ch8/: .env.template  Makefile  pyproject.toml
ch8/agents/langgraph/tools/: doc_search.py
ch8/monitoring/: 01_tracing_setup.py  02_token_and_cost.py  03_feedback.py  04_evaluation.py  05_otel_export.py  cost_calculator.py
ch9/: .gitignore  9.1.ipynb  9.1_serving_client.ipynb  9.2.ipynb  9.3.ipynb  CHANGELOG.md  README.md  agentic_rag_app.py  document_extraction_model.py  multi_agent_report_app.py  pyproject.toml
(+8 files in other folders)
