[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "ch8-monitoring"
version = "0.1.0"
description = "MLflow LLMOps監視・運用サンプル"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "mlflow[genai]>=3.9.0",
    "openai>=1.0",
    "langchain-openai>=0.3",
    "langgraph>=0.2",
    "langchain-milvus>=0.2.0,<0.3.0",
    "pymilvus>=2.5.7,<2.6.0",
    "milvus-lite>=2.4.0,<2.5.0",
    "setuptools<75",
    "exa-py>=1.0",
    "opentelemetry-api>=1.20",
    "opentelemetry-sdk>=1.20",
    "opentelemetry-exporter-otlp>=1.20",
    "python-dotenv>=1.0",
]

[tool.hatch.build.targets.wheel]
packages = ["agents", "monitoring", "scripts"]
